--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "ids-database",
+    "database": "transaction_db",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
